--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3406,3 +3406,24 @@ html {
     padding-bottom: 2rem;
   }
 }
+
+/* partikel */
+#particles-js {
+  background: linear-gradient(to right, #1728, #ddd);
+  height: 500px;
+  /* position: absolute;   */
+}
+
+.navbar {
+  /* position: absolute; */
+  /* background: black; */
+}
+
+.h-screen {
+  position: absolute;
+  background: linear-gradient(to right, #1728, #ddd);
+}
+
+body {
+  position: relative;
+}
